# DerivativeSolver

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.gtest  Makefile  README.md  build.sh  codecov.yml  config  cppcheck.sh  grammar.md  lcov.sh  testApplication.sh  travis.sh
design/docs/: grammar.md  initialDesign.md  notes.md  postMortem.md
design/drawings/: .~lock.diagrams.odg#  diagrams.odg
design/modelio_project/DerivativeSolver/: project.conf
design/modelio_project/DerivativeSolver/.runtime/: projectInfo.html
design/modelio_project/DerivativeSolver/.runtime/fragments/DerivativeSolver/.index/: index.dbf.0  index.dbr.0  index.idf.0  index.idr.0
design/modelio_project/DerivativeSolver/data/.config/: auditconfiguration.properties
design/modelio_project/DerivativeSolver/data/fragments/DerivativeSolver/model/Infrastructure.DiagramSet/: 85445c3b-0c2c-420c-b1fd-9415a59ca1f5.exml
design/modelio_project/DerivativeSolver/data/fragments/DerivativeSolver/model/Infrastructure.ModuleComponent/: e1297c72-ecec-4480-afd4-989bf1089ff2.exml
design/modelio_project/DerivativeSolver/data/fragments/DerivativeSolver/model/Infrastructure.Profile/: 03aa59e7-f6f6-446b-be93-1fa06301f45c.exml
design/modelio_project/DerivativeSolver/data/fragments/DerivativeSolver/model/Standard.Class/: 0dbf59d8-4055-4557-9cec-34fcaca3f6d9.exml  17dcc329-dc13-4848-8f84-e994154eee3a.exml  190945b6-0ca1-4a06-9e66-60e250a61710.exml  21b6b4d9-2c88-497b-b586-af470e382d84.exml  23123878-7cfa-48fa-984a-76b3b11ccecc.exml  293ad1f3-a9f8-4746-8eca-390dc1e337fa.exml  2bc9af93-0cc6-41f5-9aa5-0569c7f94b5a.exml  339bf458-5deb-4254-b4e5-e323ff0264ab.exml  3666e311-8b18-4dc4-9584-82151d9eb23e.exml  3ee4c8e2-8a54-42fb-a591-02e2cac88eb3.exml  3f7528b6-fd76-4a52-9d65-d3296943aea9.exml  422dbe13-ede2-473a-b001-17c21f14ab07.exml  451498fd-9d93-45e0-9191-cf3468e46035.exml  49d048e8-c8b8-4f5c-ae38-df58839292b6.exml  4a09998f-6926-4f6c-9daa-364c4b0c74ba.exml  4c401396-1c24-4299-9672-88b1d465409f.exml  4e45d7c2-c457-4047-a387-bf6d3458ae5a.exml  62d77f1e-15dd-4ac7-8840-85b9db4b53cc.exml  6bfd4aff-d9a3-4118-b001-584d7ce37dcd.exml  6da3501e-1576-4544-bcbf-8cf7b6cf7ff5.exml  7364e88e-5c8f-467b-ae74-8269a68d2269.exml  7f7139d1-ddc1-45ff-ba4d-d59b6b04ddc6.exml  8b05db10-5e71-40c4-9184-8519db74804d.exml  98d9d58a-eac9-4116-b29a-e344e39415f4.exml  9fb9a57e-50c5-485c-bc38-73962fc6032b.exml  a46427f9-7cc5-4d9e-8a6a-dcc9a4768ce8.exml  a9b22878-a0e6-4e85-9d8e-7788021977de.exml  b010c90a-0952-44b2-8e4a-8f2cace82201.exml  b6750f99-813b-4b70-80de-f99fb7b103c1.exml  b8749c44-43a7-43cd-9183-b7728c983cb6.exml  bda6dd15-efc0-4e5b-a8ce-42a1fa9734c7.exml  bffdada9-6fa9-4ae9-a343-ea34faa00896.exml  d98ab4b9-f458-4306-8764-35c66773ef89.exml  dc1b6a14-2eec-4eca-aeca-39ffd43075be.exml  dcbcedf7-5c84-4ca3-a56a-d9fa4838428c.exml  e4f15675-7f7f-4e70-b9cd-67ab36bbf2b1.exml  ebf66afc-7442-4b21-bd78-7d9116292eeb.exml  f1fa6925-d5e7-4473-b528-f22663bfdb0b.exml  f287b197-4ac2-477a-8e52-4af3f1e330f3.exml  f7396419-c344-4ff1-8808-8e27b7bbbbdc.exml  (+1 more)
design/modelio_project/DerivativeSolver/data/fragments/DerivativeSolver/model/Standard.ClassDiagram/: 051e4aeb-64d7-49b9-b747-33b32c225604.exml  089445b2-1661-4f69-94d9-3193d5bb5060.exml  7bcee42c-7f9f-4b81-b509-96ce863693b5.exml  bb52a063-1dfc-483a-ba24-3e368fa471ad.exml  d42220d1-7736-468e-8d35-0d402c3ee73b.exml
design/modelio_project/DerivativeSolver/data/localmodel/: localmodel.dbf.0  localmodel.dbf.t  localmodel.dbr.0  localmodel.idf.0  localmodel.idf.t  localmodel.idr.0  localmodel.idr.t
src/: Constant.cpp  Constant.h  Cos.cpp  Cos.h  Ctan.cpp  Ctan.h  Differentiator.cpp  Differentiator.h  Div.cpp  Div.h  Doubles.cpp  Doubles.h  ExceptionThrower.h  Exp.cpp  Exp.h  Expression.cpp  Expression.h  ExpressionFactory.cpp  ExpressionFactory.h  ExpressionPrinter.cpp  ExpressionPrinter.h  Function.cpp  Function.h  FunctionEvaluateRule.cpp  FunctionEvaluateRule.h  FunctionEvaluateRule.tpp  Ln.cpp  Ln.h  LnOfExpRule.cpp  LnOfExpRule.h  Makefile  Mult.cpp  Mult.h  MultConstantsRule.cpp  MultConstantsRule.h  MultIdenticalExpressionsRule.cpp  MultIdenticalExpressionsRule.h  MultNumeratorDenominatorRule.cpp  MultNumeratorDenominatorRule.h  MultNumeratorDenomnator.cpp  (+84 more)
src/MathParser/: CMakeLists.txt  CMakeLists.txt.in  Makefile  Makefile.am  __config  build.sh  config  configure.ac  lcov.sh
src/MathParser/src/: Comparator.cpp  Comparator.h  Constant.cpp  Constant.h  Cos.cpp  Cos.h  Ctan.cpp  Ctan.h  Div.cpp  Div.h  ExceptionThrower.h  Exp.cpp  Exp.h  Expression.cpp  Expression.h  ExpressionFactory.cpp  ExpressionFactory.h  Ln.cpp  Ln.h  Makefile  MathParser.h  Mult.cpp  Mult.h  Parser.h  ParserFactory.cpp  ParserFactory.h  ParserImpl.cpp  ParserImpl.h  ParserStack.cpp  ParserStack.h  ParsingException.cpp  ParsingException.h  Pointers.h  Pow.cpp  Pow.h  Rule.cpp  Rule.h  RuleDivLV.cpp  RuleDivLV.h  RuleDivRV.cpp  (+40 more)
src/MathParser/test/: ComparatorTest.cpp  ExpressionTest.cpp  Makefile  ParserTest.cpp  RuleDivLVTest.cpp  RuleDivRVTest.cpp  RuleFunctionTest.cpp  RuleMultLVTest.cpp  RuleMultRVTest.cpp  RuleNoSignMultTest.cpp  RulePowLVTest.cpp  RulePowRVTest.cpp  RuleSubLVTest.cpp  RuleSubRVTest.cpp  RuleSumLVTest.cpp  RuleSumRVTest.cpp  RuleTest.cpp  StringGeneratorTest.cpp
test/: DifferentiatorTest.cpp  ExpressionTest.cpp  FunctionEvaluateRuleTest.cpp  LnOfExpRuleTest.cpp  Makefile  MultConstantsRuleTest.cpp  MultIdenticalExpressionsRuleTest.cpp  MultNumeratorDenominatorRuleTest.cpp  MultQuotientsRuleTest.cpp  MultWithNumeratorRuleTest.cpp  OptimizerTest.cpp  ParserTest.cpp  PowConstantRuleTest.cpp  PowOfPowRuleTest.cpp  RuleDivLVTest.cpp  RuleDivRVTest.cpp  RuleFunctionTest.cpp  RuleMultLVTest.cpp  RuleMultRVTest.cpp  RulePowLVTest.cpp  RulePowRVTest.cpp  RuleSubLVTest.cpp  RuleSubRVTest.cpp  RuleSumLVTest.cpp  RuleSumRVTest.cpp  RuleTest.cpp  StringGeneratorTest.cpp  SumConstantsRuleTest.cpp  SumIdenticalExpressionsRuleTest.cpp  SumIdenticalExpressionsTest.cpp  SumWithNegativeRuleTest.cpp  SumWithNullArgumentRuleTest.cpp
(+8 files in other folders)
