#AC_CONFIG_HEADERS([config.h])
#AC_CONFIG_SRCDIR([src/Expression.cpp])

AC_PREREQ([2.69])
AC_CONFIG_MACRO_DIR([m4])
AC_INIT([libagmathparser],[0.01a])
AM_INIT_AUTOMAKE([subdir-objects])

AC_PROG_CXX
AX_CXX_COMPILE_STDCXX_14([noext],[mandatory])
CXXFLAGS="--std=c++14"
AM_PROG_AR
AC_PROG_RANLIB

AC_CONFIG_FILES([Makefile])
AC_OUTPUT